--- a/android/app/src/main/res/layout/fragment_my_stats.xml
+++ b/android/app/src/main/res/layout/fragment_my_stats.xml
@@ -61,7 +61,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:includeFontPadding="false"
-                    android:text="@{@string/stats_pie_chart_winning_percentage(myStatsUiModel.winRate)}"
+                    android:text="@{@string/stats_percentage(myStatsUiModel.winRate)}"
                     android:textColor="@color/primary500"
                     tools:text="58%" />
 
