refactor: 내 통계 승률 문자열 리소스 수정

--- a/android/app/src/main/res/layout/fragment_my_stats.xml
+++ b/android/app/src/main/res/layout/fragment_my_stats.xml
@@ -51,7 +51,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:includeFontPadding="false"
-                android:text="@{@string/stats_pie_chart_winning_percentage(myStatsUiModel.winningPercentage)}"
+                android:text="@{@string/stats_percentage(myStatsUiModel.winningPercentage)}"
                 android:textColor="@color/primary500"
                 app:layout_constraintBottom_toTopOf="@id/tv_total_attendance_count"
                 app:layout_constraintEnd_toEndOf="@id/pie_chart"
